// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > FloweaseTree > should render each tree with node class 1`] = `
"<div class="flowease-tree">
  <div class="nodeClass">
    <div><span>hello</span>
      <div class="flowease-tree">
        <div class="nodeClass indent">
          <div class="simple"><span>test</span><span>:</span><span>world</span></div>
        </div>
      </div>
    </div>
  </div>
  <div class="nodeClass">
    <div><span>options</span>
      <div class="flowease-tree">
        <div class="nodeClass indent">
          <div class="simple"><span>0</span><span>:</span><span>yes</span></div>
        </div>
        <div class="nodeClass indent">
          <div class="simple"><span>1</span><span>:</span><span>no</span></div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`components > FloweaseTree > should render simple tree 1`] = `
"<div class="flowease-tree">
  <div class="">
    <div class="simple"><span>hello</span><span>:</span><span>world</span></div>
  </div>
</div>"
`;

exports[`components > FloweaseTree > should render tree 1`] = `
"<div class="flowease-tree">
  <div class="">
    <div><span>hello</span>
      <div class="flowease-tree">
        <div class="indent">
          <div class="simple"><span>test</span><span>:</span><span>world</span></div>
        </div>
      </div>
    </div>
  </div>
  <div class="">
    <div><span>options</span>
      <div class="flowease-tree">
        <div class="indent">
          <div class="simple"><span>0</span><span>:</span><span>yes</span></div>
        </div>
        <div class="indent">
          <div class="simple"><span>1</span><span>:</span><span>no</span></div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`components > FloweaseTree > should render tree with slots 1`] = `
"<div class="flowease-tree">
  <div class="">
    <div><span>label</span>
      <div class="flowease-tree">
        <div class="indent">
          <div class="simple"><span>label</span><span>:</span><span>value</span></div>
        </div>
      </div>
    </div>
  </div>
  <div class="">
    <div><span>label</span>
      <div class="flowease-tree">
        <div class="indent">
          <div class="simple"><span>label</span><span>:</span><span>value</span></div>
        </div>
        <div class="indent">
          <div class="simple"><span>label</span><span>:</span><span>value</span></div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
